Data Cleaning Assamese

--- a/preprocessing.ipynb
+++ b/preprocessing.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 1,
    "id": "e9b27c70-0f70-47e4-9fbf-2afd9bfffb2b",
    "metadata": {},
    "outputs": [],
@@ -20,35 +20,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 2,
    "id": "130b7614-7774-443d-a00d-6d1204a8f1f0",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['Malayalam',\n",
-       " 'Kannada',\n",
-       " 'Punjabi',\n",
+       "['Sanskrit.zip',\n",
+       " 'Odia',\n",
+       " 'Kannada.zip',\n",
+       " 'Assamese',\n",
+       " 'Bengali.zip',\n",
        " 'Hindi',\n",
+       " 'Bodo',\n",
+       " 'Nepali.zip',\n",
+       " 'Hindi.zip',\n",
+       " 'Marathi',\n",
+       " 'Gujarati',\n",
        " 'Tamil',\n",
        " 'Urdu',\n",
-       " 'Odia',\n",
-       " 'Bodo',\n",
-       " 'Sanskrit',\n",
-       " 'Gujarati',\n",
-       " 'Bengali',\n",
-       " 'Assamese',\n",
-       " 'Nepali',\n",
-       " 'Kashmiri.csv',\n",
+       " 'Urdu.zip',\n",
+       " 'Multilang',\n",
+       " 'Bodo.zip',\n",
        " 'Telugu',\n",
-       " 'English',\n",
-       " 'Marathi',\n",
+       " 'Malayalam',\n",
        " 'Sindhi',\n",
-       " 'Multilang']"
+       " 'Punjabi.zip',\n",
+       " 'Kashmiri.csv',\n",
+       " 'English.zip',\n",
+       " 'Tamil.zip',\n",
+       " 'Sindhi.zip',\n",
+       " 'Telugu.zip',\n",
+       " 'Nepali',\n",
+       " 'Marathi.zip',\n",
+       " 'Gujarati.zip',\n",
+       " 'English',\n",
+       " 'Punjabi',\n",
+       " 'Assamese.zip',\n",
+       " 'Kannada',\n",
+       " 'Bengali',\n",
+       " 'Sanskrit',\n",
+       " 'Malayalam.zip',\n",
+       " 'Odia.zip']"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -59,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 3,
    "id": "52ea16db-dbb2-46db-b8bd-31a1a0b17d8c",
    "metadata": {},
    "outputs": [
@@ -67,9 +84,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "nenow_dataset.txt\n",
       "news18_preprocessed.csv\n",
       "nenow_preprocessed.csv\n",
+      "nenow_dataset.txt\n",
       "new18_dataset.txt\n"
      ]
     }
@@ -81,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 4,
    "id": "e925695c-28ca-4689-a51b-0c9e3ecccca3",
    "metadata": {},
    "outputs": [],
@@ -91,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 5,
    "id": "c500d0ba-e2b0-47d8-9cef-ce467000016c",
    "metadata": {},
    "outputs": [],
@@ -110,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 6,
    "id": "010f461d-b0c5-45ae-b96e-07ef4f6525ef",
    "metadata": {},
    "outputs": [],
@@ -128,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 7,
    "id": "7ea93d77-b040-4920-928e-c72ca95d3349",
    "metadata": {},
    "outputs": [],
@@ -138,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 8,
    "id": "55a071a8-d3a8-4e82-811d-866b5d49ecaa",
    "metadata": {},
    "outputs": [],
@@ -149,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 9,
    "id": "4ce9e8df-c26a-4cfc-a135-6eca2b598cca",
    "metadata": {},
    "outputs": [
@@ -230,7 +247,7 @@
        "4  ভাৰতত আকাশলংঘী হৈছে বিলাহীৰ দামবিলাহীৰ এই অকল্...  "
       ]
      },
-     "execution_count": 68,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -241,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 10,
    "id": "81e4e36c-a3cc-402e-92b3-520cdca8bff8",
    "metadata": {},
    "outputs": [],
@@ -251,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 11,
    "id": "e9ea9c44-65a6-4ef7-ba84-ae0c7a5acdbf",
    "metadata": {},
    "outputs": [
@@ -345,7 +362,7 @@
        "4  ভাৰতত আকাশলংঘী হৈছে বিলাহীৰ দামবিলাহীৰ এই অকল্...  "
       ]
      },
-     "execution_count": 70,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -356,7 +373,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 12,
    "id": "c0490474-6270-4e1e-be27-13b020949b20",
    "metadata": {},
    "outputs": [
@@ -366,7 +383,7 @@
        "'লকডাউনৰ বিৰুদ্ধে চীনত আজিও অব্যাহত আছে প্ৰতিবাদপ্ৰতিবাদ নিৰ্মূল কৰিবলৈ চীনৰ চৰকাৰে বিশ্ববিদ্যালয়ৰ শিক্ষাৰ্থীসকলক ঘৰলৈ যাবলৈ নিৰ্দেশ দিছেইপিনে চীনৰ এনে পৰিস্থিতিৰ বাতৰি সংগ্ৰহ কৰিবলৈ যোৱা বিবিচিৰ এজন সাংবাদিকক আজি চীনা সেনাই অকথ্য নিৰ্যাতন চলাই গ্ৰেপ্তাৰ কৰাৰ ঘটনাই সমগ্ৰ বিশ্বতে প্ৰতিক্ৰিয়াৰ সৃষ্টি কৰিছেউল্লেখ্য কোভিড সংক্ৰমণৰ বাবেই চীনৰ বিভিন্ন প্ৰান্তত কঠোৰ লকডাউন ঘোষণা কৰা হৈছেমানুহ গৃহবন্দী হৈ থাকিবলগীয়া হোৱাত অতিষ্ঠ হৈ পৰিছেএনে পৰিস্থিতিত মানুহ উত্তেজিত হৈ পৰিছে আৰু চৰকাৰৰ বিৰুদ্ধে প্ৰতিবাদ কৰিবলৈ ৰাজপথলৈ ওলাই আহিছেচৰকাৰৰ কোভিড নীতিৰ বিৰুদ্ধে প্ৰতিবাদ কৰিবলৈ বেইজিং আৰু ছাংহাইত হাজাৰ হাজাৰ মাউহে ৰাজপথলৈ ওলাই আহিছেআজিও আন্দোলন চলিয়েই আছেআৰক্ষীপ্ৰশাসনে প্ৰতিবাদকাৰীৰ বিৰুদ্ধে কঠোৰ ব্যৱস্থা গ্ৰহণ কৰিছেঝি জিনপিং চৰকাৰে কৰোনা ভাইৰাছৰ বিৰুদ্ধে দি থকা যুঁজত কোভিডমুক্ত নীতি গ্ৰহণ কৰিছেসেয়ে গ্ৰহণ কৰা হৈছে অধিক কঠোৰ পদক্ষেপচৰকাৰৰ কঠোৰ কোভিড নিয়মৰ বিৰুদ্ধে জনতাৰ প্ৰতিবাদ সমগ্ৰ দেশতে বিয়পি পৰিছেচৰকাৰৰ বিৰুদ্ধে এনে স্বতঃস্ফূৰ্ত গণ আন্দোলন চীনত বিৰল বুলি কব পাৰিআনকি কোভিডৰ প্ৰথম সংক্ৰমণৰ সময়তো তেনে হোৱা নাছিল নৰ্থইষ্ট নাও এটা মাল্টিএপ ভিত্তিক সম্পূৰ্ণভাৱে আঞ্চলিক দ্বিভাষিক নিউজ প্টেলপেচাদাৰী ব্যক্তিৰ এটা গোটৰ নেতৃত্বত এই ডিজিটেল অসমীয়া বাতৰি প্ৰতিষ্ঠানটোৱে উত্তৰপূবৰ আঠখন ৰাজ্য আৰু এইবোৰৰ প্ৰতিৱেশী দেশকেইখনৰ প্ৰতিটো খাখবৰ সামৰি লোৱাৰ চেষ্টা কৰিবদুটাকৈ ইংৰাজী এপ আৰু এটা অসমীয়া এপৰ সংস্কৰণ থকা এইটোৱে হল এই ধৰণৰ প্ৰথমটো নিউজ প্টেলআমি ৰাজনৈতিকভাৱে নিৰপেক্ষ আৰু দক্ষিণপূব আৰু দক্ষিণ এছিয়াৰ মাজৰ প্ৰকৃত বাবাতৰিৰ সাঁকোৰ ভূমিকা লবলৈ চেষ্টা কৰিম'"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -377,7 +394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 13,
    "id": "e3f9ba3a-5041-436e-ab4b-a719625e4fa1",
    "metadata": {},
    "outputs": [
@@ -386,6 +403,14 @@
      "output_type": "stream",
      "text": [
       "0 আং ছান ছু কীফাইল ফটোসংগ্ৰহীতকাৰাগাৰৰ সূত্ৰই জনোৱা মতে সোমবাৰে কাৰাগাৰৰ পৰা ৰাজধানী নেইপিড চৰকাৰী বাসগৃহলৈ স্থানান্তৰ কৰা হয় ছ্যু কীকলগতে পঢ়কআই এন এছ বিক্ৰান্তত যুৱ নৌসেনা জোৱানৰ মৃতদেহ উদ্ধাৰ ৰহস্যময় মৃত্যুক লৈ চাঞ্চল্য কাৰাগাৰৰ পৰা বদলি হোৱাৰ কথা আনুষ্ঠানিকভাৱে নিশ্চিত কৰা হোৱা নাইঅৱশ্যে গৃহবন্দী কৰাৰ বিষয়টো সামৰিক কৰ্তৃপক্ষৰ এক ইতিবাচক পদক্ষেপো হব পাৰেছ্যু কীক অসুস্থ বুলি বাতৰি প্ৰচাৰ হৈছিলঅৱশ্যে সেনাই এই কথা অস্বীকাৰ কৰিছেচলিত সপ্তাহৰ আৰম্ভণিতে কাৰাগাৰৰ সূত্ৰই প্ৰকাশ কৰা অনুসৰি ছু কীৰ স্বাস্থ্য ভালেই আছেলগতে পঢ়কমাজভাগতে শিক্ষা এৰিছে কেন্দ্ৰীয় বিশ্ববিদ্যালয়ৰ ২৫ হাজাৰ ৫৯৩ জন ছাত্ৰছাত্ৰীয়ে থাইলেণ্ডৰ বৈদেশিক মন্ত্ৰীয়ে চলিত মাহত কাৰাগাৰত থকা ছু কীৰ ওচৰলৈ গৈছিলঅৱশ্যে তেওঁ আৰু কোনো সবিশেষ তথ্য প্ৰকাশ কৰা নাই নৰ্থইষ্ট নাও এটা মাল্টিএপ ভিত্তিক সম্পূৰ্ণভাৱে আঞ্চলিক দ্বিভাষিক নিউজ প্টেলপেচাদাৰী ব্যক্তিৰ এটা গোটৰ নেতৃত্বত এই ডিজিটেল অসমীয়া বাতৰি প্ৰতিষ্ঠানটোৱে উত্তৰপূবৰ আঠখন ৰাজ্য আৰু এইবোৰৰ প্ৰতিৱেশী দেশকেইখনৰ প্ৰতিটো খাখবৰ সামৰি লোৱাৰ চেষ্টা কৰিবদুটাকৈ ইংৰাজী এপ আৰু এটা অসমীয়া এপৰ সংস্কৰণ থকা এইটোৱে হল এই ধৰণৰ প্ৰথমটো নিউজ প্টেলআমি ৰাজনৈতিকভাৱে নিৰপেক্ষ আৰু দক্ষিণপূব আৰু দক্ষিণ এছিয়াৰ মাজৰ প্ৰকৃত বাবাতৰিৰ সাঁকোৰ ভূমিকা লবলৈ চেষ্টা কৰিম\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/tmp/ipykernel_40491/900385898.py:2: FutureWarning: Series.__getitem__ treating keys as positions is deprecated. In a future version, integer keys will always be treated as labels (consistent with DataFrame behavior). To access a value by position, use `ser.iloc[pos]`\n",
+      "  print(i[0], i[1][2])\n"
      ]
     }
    ],
@@ -396,7 +421,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 14,
    "id": "d6f10c23-0155-48ff-ba2c-c01f23c67d66",
    "metadata": {},
    "outputs": [],
@@ -406,7 +431,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 15,
    "id": "88e138fa-eed8-4727-8434-51dcc8c76f23",
    "metadata": {},
    "outputs": [
@@ -468,7 +493,7 @@
        "4  ভাৰতত আকাশলংঘী হৈছে বিলাহীৰ দামবিলাহীৰ এই অকল্..."
       ]
      },
-     "execution_count": 74,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -479,7 +504,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 16,
    "id": "05950b26-8989-4ccb-95a7-7ac62cbaf2c6",
    "metadata": {},
    "outputs": [],
@@ -489,7 +514,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 17,
    "id": "adc426d8-379f-426b-9b73-e38654caa66c",
    "metadata": {},
    "outputs": [
@@ -570,7 +595,7 @@
        "4  বুধবাৰে সন্ধিয়া পাঁচ বজাত নতুন দিল্লীত অনুষ্ঠি...  "
       ]
      },
-     "execution_count": 76,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -581,7 +606,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 18,
    "id": "82a7928b-c4b5-4bdb-86c3-5220832bd192",
    "metadata": {},
    "outputs": [],
@@ -591,7 +616,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 19,
    "id": "8521cb01-62b9-456e-8eef-81b850c52ae2",
    "metadata": {},
    "outputs": [
@@ -685,7 +710,7 @@
        "4  বুধবাৰে সন্ধিয়া পাঁচ বজাত নতুন দিল্লীত অনুষ্ঠি...  "
       ]
      },
-     "execution_count": 78,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -696,7 +721,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 20,
    "id": "b37576f3-483b-4691-8349-de7602d5ac7e",
    "metadata": {},
    "outputs": [],
@@ -706,7 +731,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 21,
    "id": "075b1e50-e6d9-4598-984e-2904490de906",
    "metadata": {},
    "outputs": [
@@ -768,7 +793,7 @@
        "4  বুধবাৰে সন্ধিয়া পাঁচ বজাত নতুন দিল্লীত অনুষ্ঠি..."
       ]
      },
-     "execution_count": 80,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -779,7 +804,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 22,
    "id": "ba4b8e4f-d039-4af4-a4b7-251266cb5093",
    "metadata": {},
    "outputs": [],
@@ -789,7 +814,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 23,
    "id": "74888aea-d5ff-468a-8db1-bd88182cd92c",
    "metadata": {},
    "outputs": [
@@ -851,7 +876,7 @@
        "4  ভাৰতত আকাশলংঘী হৈছে বিলাহীৰ দামবিলাহীৰ এই অকল্..."
       ]
      },
-     "execution_count": 82,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -862,7 +887,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 24,
    "id": "cd344694-56d3-41c8-83ef-f604d4d925c3",
    "metadata": {},
    "outputs": [],
@@ -937,9 +962,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:language_detection] *",
+   "display_name": "language_detection",
    "language": "python",
-   "name": "conda-env-language_detection-py"
+   "name": "language_detection"
   },
   "language_info": {
    "codemirror_mode": {
@@ -951,7 +976,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.0"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
