Added Language: Nepali

--- a/preprocessing.ipynb
+++ b/preprocessing.ipynb
@@ -8267,9 +8267,510 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "492a1dc8-6bb0-4955-96a1-2973d72dc122",
+   "metadata": {},
+   "source": [
+    "## Nepali"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "c3488821-1ed2-40fb-ab19-0d28f4e1e17f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import os\n",
+    "import re"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "78c98859-4963-46ff-b41f-a6fea81f80f3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data = pd.DataFrame(columns=['text'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "4fbe2f21-be13-405b-9840-de67e2573a59",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "for i in os.listdir('datasets/Nepali'):\n",
+    "    for folder in os.listdir(f'datasets/Nepali/{i}'):\n",
+    "        for file in os.listdir(f'datasets/Nepali/{i}/{folder}'):\n",
+    "            with open(f'datasets/Nepali/{i}/{folder}/{file}') as f:                    \n",
+    "                data.loc[len(data.index)] = [f.read()]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "d01a3d3a-ec4b-4c83-9ace-4dc4c6d4e984",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>text</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>\"\"\"बीपीले नारीभाव सजिलै बुझ्नुभयो\"\"\"झन्डै  चार...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>पन्थीलाई भिक्षु साहित्यकार देवी पन्थीलाई भवानी...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>शिरीषको फूल अब हलमासाहित्यकार पारिजातको चर्चित...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>पत्रकार पारसले थपे परिचयपत्रकारितासँगै पुस्तक ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>गीतकार खरेल र भुमरी पुरस्कृतगीतकार संघ नेपालले...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                                text\n",
+       "0  \"\"\"बीपीले नारीभाव सजिलै बुझ्नुभयो\"\"\"झन्डै  चार...\n",
+       "1  पन्थीलाई भिक्षु साहित्यकार देवी पन्थीलाई भवानी...\n",
+       "2  शिरीषको फूल अब हलमासाहित्यकार पारिजातको चर्चित...\n",
+       "3  पत्रकार पारसले थपे परिचयपत्रकारितासँगै पुस्तक ...\n",
+       "4  गीतकार खरेल र भुमरी पुरस्कृतगीतकार संघ नेपालले..."
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "8f1e6eef-864a-46da-b729-651032c12e8f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(10000, 1)"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "43e7a6b4-c50a-49f9-a5e5-eb859b03ee30",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def extract_nepali_text(text):\n",
+    "    # Regular expression pattern to match Nepali characters and newline\n",
+    "    nepali_pattern = re.compile(r'[\\u0900-\\u097F\\s\\n]+')\n",
+    "    \n",
+    "    # Find all matches of Nepali text in the input text\n",
+    "    nepali_matches = nepali_pattern.findall(str(text))\n",
+    "\n",
+    "    # Filter out empty strings, whitespace characters, and newline characters\n",
+    "    nepali_matches = [match.strip() for match in nepali_matches if match.strip() != '\\n']\n",
+    "\n",
+    "    # Join the matches to form the extracted Nepali text\n",
+    "    nepali_text = ' '.join(nepali_matches)\n",
+    "    \n",
+    "    # Remove extra spaces\n",
+    "    nepali_text = ' '.join(nepali_text.split())\n",
+    "\n",
+    "    return nepali_text"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "09d4ad3e-6e4c-4fda-8923-cec08726160c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data['cleaned'] = data['text'].apply(extract_nepali_text)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "343b906b-9edb-4e05-999e-997bae33f19f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>text</th>\n",
+       "      <th>cleaned</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>\"\"\"बीपीले नारीभाव सजिलै बुझ्नुभयो\"\"\"झन्डै  चार...</td>\n",
+       "      <td>बीपीले नारीभाव सजिलै बुझ्नुभयो झन्डै चार दशक ल...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>पन्थीलाई भिक्षु साहित्यकार देवी पन्थीलाई भवानी...</td>\n",
+       "      <td>पन्थीलाई भिक्षु साहित्यकार देवी पन्थीलाई भवानी...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>शिरीषको फूल अब हलमासाहित्यकार पारिजातको चर्चित...</td>\n",
+       "      <td>शिरीषको फूल अब हलमासाहित्यकार पारिजातको चर्चित...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>पत्रकार पारसले थपे परिचयपत्रकारितासँगै पुस्तक ...</td>\n",
+       "      <td>पत्रकार पारसले थपे परिचयपत्रकारितासँगै पुस्तक ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>गीतकार खरेल र भुमरी पुरस्कृतगीतकार संघ नेपालले...</td>\n",
+       "      <td>गीतकार खरेल र भुमरी पुरस्कृतगीतकार संघ नेपालले...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                                text  \\\n",
+       "0  \"\"\"बीपीले नारीभाव सजिलै बुझ्नुभयो\"\"\"झन्डै  चार...   \n",
+       "1  पन्थीलाई भिक्षु साहित्यकार देवी पन्थीलाई भवानी...   \n",
+       "2  शिरीषको फूल अब हलमासाहित्यकार पारिजातको चर्चित...   \n",
+       "3  पत्रकार पारसले थपे परिचयपत्रकारितासँगै पुस्तक ...   \n",
+       "4  गीतकार खरेल र भुमरी पुरस्कृतगीतकार संघ नेपालले...   \n",
+       "\n",
+       "                                             cleaned  \n",
+       "0  बीपीले नारीभाव सजिलै बुझ्नुभयो झन्डै चार दशक ल...  \n",
+       "1  पन्थीलाई भिक्षु साहित्यकार देवी पन्थीलाई भवानी...  \n",
+       "2  शिरीषको फूल अब हलमासाहित्यकार पारिजातको चर्चित...  \n",
+       "3  पत्रकार पारसले थपे परिचयपत्रकारितासँगै पुस्तक ...  \n",
+       "4  गीतकार खरेल र भुमरी पुरस्कृतगीतकार संघ नेपालले...  "
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "e9606c99-1436-47db-a230-8e209268fc23",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data = data[['cleaned']]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "a531a1b7-bd98-4eee-8c20-ffbc6cb89654",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>cleaned</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>बीपीले नारीभाव सजिलै बुझ्नुभयो झन्डै चार दशक ल...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>पन्थीलाई भिक्षु साहित्यकार देवी पन्थीलाई भवानी...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>शिरीषको फूल अब हलमासाहित्यकार पारिजातको चर्चित...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>पत्रकार पारसले थपे परिचयपत्रकारितासँगै पुस्तक ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>गीतकार खरेल र भुमरी पुरस्कृतगीतकार संघ नेपालले...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                             cleaned\n",
+       "0  बीपीले नारीभाव सजिलै बुझ्नुभयो झन्डै चार दशक ल...\n",
+       "1  पन्थीलाई भिक्षु साहित्यकार देवी पन्थीलाई भवानी...\n",
+       "2  शिरीषको फूल अब हलमासाहित्यकार पारिजातको चर्चित...\n",
+       "3  पत्रकार पारसले थपे परिचयपत्रकारितासँगै पुस्तक ...\n",
+       "4  गीतकार खरेल र भुमरी पुरस्कृतगीतकार संघ नेपालले..."
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "6711b66f-a0b6-4b88-986a-1b1382021ac9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data.rename(columns={\n",
+    "    'cleaned': 'text'\n",
+    "}, inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "id": "507bc06c-cead-4fbb-a072-4177d8e69dbd",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>text</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>बीपीले नारीभाव सजिलै बुझ्नुभयो झन्डै चार दशक ल...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>पन्थीलाई भिक्षु साहित्यकार देवी पन्थीलाई भवानी...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>शिरीषको फूल अब हलमासाहित्यकार पारिजातको चर्चित...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>पत्रकार पारसले थपे परिचयपत्रकारितासँगै पुस्तक ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>गीतकार खरेल र भुमरी पुरस्कृतगीतकार संघ नेपालले...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                                text\n",
+       "0  बीपीले नारीभाव सजिलै बुझ्नुभयो झन्डै चार दशक ल...\n",
+       "1  पन्थीलाई भिक्षु साहित्यकार देवी पन्थीलाई भवानी...\n",
+       "2  शिरीषको फूल अब हलमासाहित्यकार पारिजातको चर्चित...\n",
+       "3  पत्रकार पारसले थपे परिचयपत्रकारितासँगै पुस्तक ...\n",
+       "4  गीतकार खरेल र भुमरी पुरस्कृतगीतकार संघ नेपालले..."
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "id": "93de6855-3e0b-4c4e-a3fb-b624e51160dd",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "text    0\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data.isna().sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "id": "8864bc91-843b-4f9b-8d17-b5528013d6a9",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data.duplicated().sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "id": "9cf8ddc4-e26f-442a-a1d6-aecd619976f1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data.drop_duplicates(inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "id": "c69ee4fa-75ee-44bb-b2c5-d8818a06a4f5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data.to_csv('final/Nepali.csv')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ef206620-dcdc-437c-ace3-d9136f0459fa",
+   "metadata": {},
+   "source": [
+    "## Odia"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cc519193-7952-464c-8015-998ae255c6c7",
+   "id": "762f3e22-c565-4c20-a01d-45d63ef9423c",
    "metadata": {},
    "outputs": [],
    "source": []
