--- a/preprocessing.ipynb
+++ b/preprocessing.ipynb
@@ -70949,7 +70949,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 332,
+   "execution_count": 8,
+   "id": "5d0c1bbb-61d4-4f9c-b6fe-eab1d3f3c9f4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import re"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
    "id": "60c4e5bb-54b3-4dca-a647-e080df95a117",
    "metadata": {},
    "outputs": [],
@@ -70959,7 +70970,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 333,
+   "execution_count": 17,
    "id": "0c73b784-7892-47e8-bebb-f0d02a16ff59",
    "metadata": {},
    "outputs": [
@@ -71052,7 +71063,7 @@
        "4  https://www.thekawish.com/Articles1/Ali%20Kazi...  17Sept2017  Ali Kazi   "
       ]
      },
-     "execution_count": 333,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -71063,7 +71074,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 334,
+   "execution_count": 18,
    "id": "f0a77e09-dc6d-4dc0-ae88-a22acb2de356",
    "metadata": {},
    "outputs": [],
@@ -71073,7 +71084,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 335,
+   "execution_count": 19,
    "id": "219c8e8f-1683-4dcb-8ad6-d9b02988c212",
    "metadata": {},
    "outputs": [
@@ -71135,7 +71146,7 @@
        "4  جڏهن ڪو نوجوان چئي ٿو ته کيس فلاڻي سان ”سچي مح..."
       ]
      },
-     "execution_count": 335,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -71146,27 +71157,271 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "id": "6625159e-3658-4442-86fe-ede6187efaab",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def extract_sindhi_text(text):\n",
+    "    # Regular expression pattern to match Sindhi characters and newline\n",
+    "    sindhi_pattern = re.compile(r'[\\u0600-\\u06FF\\s\\n]+')\n",
+    "    \n",
+    "    # Find all matches of Sindhi text in the input text\n",
+    "    sindhi_matches = sindhi_pattern.findall(str(text))\n",
+    "\n",
+    "    # Filter out empty strings, whitespace characters, and newline characters\n",
+    "    sindhi_matches = [match.strip() for match in sindhi_matches if match.strip() != '\\n']\n",
+    "\n",
+    "    # Join the matches to form the extracted Sindhi text\n",
+    "    sindhi_text = ' '.join(sindhi_matches)\n",
+    "    \n",
+    "    # Remove extra spaces\n",
+    "    sindhi_text = ' '.join(sindhi_text.split())\n",
+    "\n",
+    "    return sindhi_text"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "cfdf4ff3-20df-4c48-b090-eb5fc9a61232",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "id": "558fec92-bbc4-47e9-ad8a-e8679598bebb",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "data['text'] = data['article'].apply(extract_sindhi_text)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "d5df7509-dc49-4733-a357-6f3f24bfad1c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>article</th>\n",
+       "      <th>text</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>ڇا پي پي پي سنڌ ۾ ڪنهن نئين پارٽي ط...</td>\n",
+       "      <td>ڇا پي پي پي سنڌ ۾ ڪنهن نئين پارٽي طور وجود ۾ آ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>سنڌيءَ چوڻي آهي ته، ”مينهن چئي ڍڳيءَ کي هَل پُ...</td>\n",
+       "      <td>سنڌيءَ چوڻي آهي ته، مينهن چئي ڍڳيءَ کي هَل پُڇ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>سنڌيءَ چوڻي آهي ته، ”مينهن چئي ڍڳيءَ کي هَل پُ...</td>\n",
+       "      <td>سنڌيءَ چوڻي آهي ته، مينهن چئي ڍڳيءَ کي هَل پُڇ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>ڪنهن پروفيسر، ڊاڪٽر، وڪيل يا اديب سان ڳالهايو ...</td>\n",
+       "      <td>ڪنهن پروفيسر، ڊاڪٽر، وڪيل يا اديب سان ڳالهايو ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>جڏهن ڪو نوجوان چئي ٿو ته کيس فلاڻي سان ”سچي مح...</td>\n",
+       "      <td>جڏهن ڪو نوجوان چئي ٿو ته کيس فلاڻي سان سچي محب...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                             article  \\\n",
+       "0             ڇا پي پي پي سنڌ ۾ ڪنهن نئين پارٽي ط...   \n",
+       "1  سنڌيءَ چوڻي آهي ته، ”مينهن چئي ڍڳيءَ کي هَل پُ...   \n",
+       "2  سنڌيءَ چوڻي آهي ته، ”مينهن چئي ڍڳيءَ کي هَل پُ...   \n",
+       "3  ڪنهن پروفيسر، ڊاڪٽر، وڪيل يا اديب سان ڳالهايو ...   \n",
+       "4  جڏهن ڪو نوجوان چئي ٿو ته کيس فلاڻي سان ”سچي مح...   \n",
+       "\n",
+       "                                                text  \n",
+       "0  ڇا پي پي پي سنڌ ۾ ڪنهن نئين پارٽي طور وجود ۾ آ...  \n",
+       "1  سنڌيءَ چوڻي آهي ته، مينهن چئي ڍڳيءَ کي هَل پُڇ...  \n",
+       "2  سنڌيءَ چوڻي آهي ته، مينهن چئي ڍڳيءَ کي هَل پُڇ...  \n",
+       "3  ڪنهن پروفيسر، ڊاڪٽر، وڪيل يا اديب سان ڳالهايو ...  \n",
+       "4  جڏهن ڪو نوجوان چئي ٿو ته کيس فلاڻي سان سچي محب...  "
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "0266b39a-c601-4d5b-b6f2-6bd155028c54",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data = data[['text']]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "6f9a2758-d1db-4687-a593-e18e50f194cd",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>text</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>ڇا پي پي پي سنڌ ۾ ڪنهن نئين پارٽي طور وجود ۾ آ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>سنڌيءَ چوڻي آهي ته، مينهن چئي ڍڳيءَ کي هَل پُڇ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>سنڌيءَ چوڻي آهي ته، مينهن چئي ڍڳيءَ کي هَل پُڇ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>ڪنهن پروفيسر، ڊاڪٽر، وڪيل يا اديب سان ڳالهايو ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>جڏهن ڪو نوجوان چئي ٿو ته کيس فلاڻي سان سچي محب...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                                text\n",
+       "0  ڇا پي پي پي سنڌ ۾ ڪنهن نئين پارٽي طور وجود ۾ آ...\n",
+       "1  سنڌيءَ چوڻي آهي ته، مينهن چئي ڍڳيءَ کي هَل پُڇ...\n",
+       "2  سنڌيءَ چوڻي آهي ته، مينهن چئي ڍڳيءَ کي هَل پُڇ...\n",
+       "3  ڪنهن پروفيسر، ڊاڪٽر، وڪيل يا اديب سان ڳالهايو ...\n",
+       "4  جڏهن ڪو نوجوان چئي ٿو ته کيس فلاڻي سان سچي محب..."
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "4b8c2e56-90e1-4b98-8e52-1a23c9509240",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data.to_csv('final/Sindhi.csv')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "96978e5f-579d-4fa5-9aa0-aeeb0f3d572f",
+   "metadata": {},
+   "source": [
+    "## Tamil"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "6d21bda1-ffa0-4db7-b7dc-c45e6b0a63ac",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "90be0872-dfca-4d46-91fb-eaa6e79537d7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tamil_thirukkural_test.csv\n",
+      "tamil_movie_reviews_test.csv\n",
+      "tamil_movie_reviews_train.csv\n",
+      "tamil_news_train.csv\n",
+      "tamil_thirukkural_train.csv\n",
+      "tamil_news_test.csv\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in os.listdir('datasets/Tamil'):\n",
+    "    print(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "ad8f6b05-ab45-4140-8d3f-ad62c2a709bd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open('datasets/Tamil/tamil_thirukkural_test.csv') as f:\n",
+    "    data = f.readlines()"
+   ]
   }
  ],
  "metadata": {
@@ -71185,7 +71440,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.8"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
