--- a/preprocessing.ipynb
+++ b/preprocessing.ipynb
@@ -29,24 +29,7 @@
     {
      "data": {
       "text/plain": [
-       "['Malayalam',\n",
-       " 'Kannada',\n",
-       " 'Punjabi',\n",
-       " 'Hindi',\n",
-       " 'Tamil',\n",
-       " 'Urdu',\n",
-       " 'Odia',\n",
-       " 'Bodo',\n",
-       " 'Sanskrit',\n",
-       " 'Gujarati',\n",
-       " 'Bengali',\n",
-       " 'Assamese',\n",
-       " 'Nepali',\n",
-       " 'Kashmiri.csv',\n",
-       " 'Telugu',\n",
-       " 'English',\n",
-       " 'Marathi',\n",
-       " 'Sindhi']"
+       "['bangla-text-dataset.zip', 'Assamese']"
       ]
      },
      "execution_count": 2,
